TS-1955 Range: requests during read-while-writer gets the wrong Content-Length